--- a/src/views/temarioViews/css/estilo.css
+++ b/src/views/temarioViews/css/estilo.css
@@ -14,6 +14,11 @@
 	color:white !important;
 }	
 
+.bg-fondo-btn3{
+	background-color:  #c52d49 !important;
+	color:white !important;
+}
+
 .bordeAcordeon{
 	border-bottom: 1px solid #737276	 !important;
 }
