--- a/src/views/temarioViews/css/estilo.css
+++ b/src/views/temarioViews/css/estilo.css
@@ -229,6 +229,12 @@ td,th{
 		list-style: square inside url("../../../assets/img/ImgEtiquetaTelefonica/check.png");
 		
 	  }
+
+	  .borderCaja{
+		border-top: 5px solid #c00327;
+		border-left: 5px solid #c00327;
+		  
+	  }
 	  
 
 
