--- a/src/views/temarioViews/css/estilo.css
+++ b/src/views/temarioViews/css/estilo.css
@@ -235,6 +235,13 @@ td,th{
 		border-left: 5px solid #c00327;
 		  
 	  }
+
+	  .flecha{
+		  position: absolute;
+		  right: -20px;
+		  top: 30px;
+
+	  }
 	  
 
 
